# tiny-pmc

./: .gitignore  Cargo.toml  README.md
prism-model/: Cargo.toml
prism-model-builder/: Cargo.toml
prism-model-builder/src/: lib.rs  model_in_progress.rs  synchronised_actions.rs
prism-model-builder/src/expressions/: mod.rs  tree_walking_enumerator.rs
prism-model-builder/src/variables/: const_only_valuation_source.rs  const_valuations.rs  mod.rs  valuation_map.rs  valuation_source.rs  variable_details.rs
prism-model/src/: actions.rs  command.rs  displayable.rs  expressions.rs  formulas.rs  identifier.rs  labels.rs  lib.rs  model.rs  module.rs  rewards.rs  variable_index.rs  variables.rs
prism-model/src/expressions/: label_substitution.rs  mod.rs
prism-model/src/formulas/: mod.rs  (+1 more)
prism-parser/: Cargo.toml
prism-parser/src/: character_to_line.rs  error.rs  lexer.rs  lib.rs  parser.rs  substitutable_query.rs
probabilistic-model-algorithms/: Cargo.toml
probabilistic-model-algorithms/src/: lib.rs
probabilistic-models/: Cargo.toml
probabilistic-models/src/: lib.rs
probabilistic-properties/: Cargo.toml
probabilistic-properties/src/: lib.rs
tiny-pmc/: Cargo.toml
tiny-pmc-benchmarking/: Cargo.toml
tiny-pmc-benchmarking/files/: readme.md
tiny-pmc-benchmarking/src/: benchmark.rs  main.rs
tiny-pmc-cli/: Cargo.toml
tiny-pmc-cli/src/: main.rs
tiny-pmc-cli/src/arg_parsing/: mod.rs
tiny-pmc-cli/src/input/: mod.rs
tiny-pmc-cli/src/input/constants/: mod.rs
tiny-pmc-cli/src/input/prism/: mod.rs
tiny-pmc-cli/src/tests/: mod.rs
tiny-pmc-cli/src/tests/files/: bluetooth.v1.prism  consensus.2.v1-fixed.prism  consensus.4.prism  consensus.6.v1.prism  nand.v1.prism  tiny_test.prism
tiny-pmc/src/: lib.rs
tiny-pmc/src/building/: atomic_propositions.rs  mod.rs
tiny-pmc/src/checking/: mod.rs
tiny-pmc/src/checking/markov_chains/: mod.rs
tiny-pmc/src/checking/markov_decision_processes/: mod.rs
tiny-pmc/src/checking/nonstochastic_games/: mod.rs
tiny-pmc/src/checking/stochastic_games/: mod.rs
tiny-pmc/src/checking/transition_systems/: mod.rs
tiny-pmc/src/high_level_models/: mod.rs
tiny-pmc/src/parsing/: mod.rs
tiny-pmc/src/parsing/constants/: mod.rs
(+122 files in other folders)
