[package]
name = "tiny-pmc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
prism-model = { path = "../prism-model" }
probabilistic-properties = { path = "../probabilistic-properties" }
prism-parser = { path = "../prism-parser" }
prism-model-builder = { path = "../prism-model-builder" }
probabilistic-models = { path = "../probabilistic-models" }
tiny-pmc = { path = "../tiny-pmc" }
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = "1.0.0-alpha.8"
clap = { version = "4.5.51", features = ["derive"] }
