[package]
name = "tiny-pmc"
version = "0.1.0"
edition = "2021"

[dependencies]
prism-model = { path = "../prism-model" }
prism-parser = { path = "../prism-parser" }
probabilistic-models = { path = "../probabilistic-models" }
prism-model-builder = { path = "../prism-model-builder" }
chumsky = "1.0.0-alpha.8"
