[package]
name = "tiny-pmc"
version = "0.1.0"
edition = "2024"

[dependencies]
prism-model = { path = "../prism-model" }
prism-parser = { path = "../prism-parser" }
probabilistic-models = { path = "../probabilistic-models" }
probabilistic-properties = { path = "../probabilistic-properties" }
prism-model-builder = { path = "../prism-model-builder" }
probabilistic-model-algorithms = { path = "../probabilistic-model-algorithms" }
chumsky = "1.0.0-alpha.8"
ariadne = "0.6.0"